src/tests/fail/too_general.ml
open SCaml
let main x storage = [], storage + Int 1
